<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="160dp"
    android:layout_margin="8dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/tv_widget_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_t2"
            style="@style/my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_temperature_2"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/appwidget_hum"
            style="@style/my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_humidity"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_air"
            style="@style/my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_air"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/appwidget_pre"
            style="@style/my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_pressure"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

</LinearLayout>