<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cv_btn_ok"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="1dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/title_paired_devices"
            android:textColor="#fff"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="true"/>

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/title_other_devices"
            android:textColor="#fff"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:stackFromBottom="true"/>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scan"/>

        <ProgressBar
            android:id="@+id/pb_device_scan"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:progress="@android:integer/config_longAnimTime"
            android:visibility="invisible"/>

    </LinearLayout>
</android.support.v7.widget.CardView>